# slimonnx

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  TESTING_IMPLEMENTATION.md  __init__.py  coverage.json  pyproject.toml
.github/workflows/: unit-tests.yml
nets/: ibp_3_3_8_v22.onnx  ibp_3_3_8_v22_simplified.onnx  ibp_3_3_8_v22_slimmed.onnx
shapeonnx/: README.md  __init__.py
shapeonnx/shapeonnx/: __init__.py  infer_shape.py
slimonnx/: __init__.py  analyze_structure.py  configs.py  get_attrs.py  infer_shape.py  onnx_attrs.py  optimize_onnx.py  presets.py  slimonnx.py  utils.py
slimonnx/model_validate/: __init__.py  graph_validator.py  numerical_compare.py  onnx_checker.py  runtime_validator.py
slimonnx/optimize_onnx/: __init__.py  _bn_conv.py  _bn_conv_with_padding.py  _bn_gemm.py  _bn_transpose.py  _conv.py  _cst2initer.py  _cst_op.py  _depthwise_conv.py  _dropout.py  _gemm.py  _gemm_gemm.py  _mm_add.py  _name.py  _onnx_attrs.py  _optimize.py  _ordering.py  _redundant.py  _reshape.py  _rhs_var.py  _rm_redundant.py  _shp2initer.py  _sim_name.py  _utils.py  constants.py
slimonnx/pattern_detect/: __init__.py  conv_bn.py  depthwise_conv.py  dropout.py  gemm_bn.py  gemm_chains.py  matmul_add.py  redundant_ops.py  registry.py  reshape_chains.py  transpose_bn.py
slimonnx/preprocess/: __init__.py  version_converter.py
slimonnx/structure_analysis/: __init__.py  analyzer.py  reporter.py  topology.py
src/slimonnx/: __init__.py  analyze_structure.py  configs.py  constants.py  presets.py  slimonnx.py  utils.py
src/slimonnx/model_validate/: __init__.py  _orchestrator.py  graph_validator.py  numerical_compare.py  onnx_checker.py  runtime_validator.py
src/slimonnx/optimize_onnx/: __init__.py  _bn_conv.py  _bn_gemm.py  _bn_transpose.py  _constants.py  _conv.py  _cst2initer.py  _cst_op.py  _depthwise_conv.py  _dropout.py  _gemm.py  _gemm_gemm.py  _mm_add.py  _name.py  _onnx_attrs.py  _optimize.py  _ordering.py  _redundant.py  _reshape.py  _utils.py
src/slimonnx/pattern_detect/: __init__.py  _enums.py  constant_ops.py  conv_bn.py  depthwise_conv.py  dropout.py  gemm_bn.py  gemm_chains.py  matmul_add.py  redundant_ops.py  registry.py  reshape_chains.py  reshape_negative_one.py  transpose_bn.py  utils.py
src/slimonnx/preprocess/: __init__.py  cleanup.py  version_converter.py
src/slimonnx/structure_analysis/: __init__.py  analyzer.py  reporter.py  topology.py
test/: benchmark_config.py  build_benchmarks.py  build_test_data.py  cal_outputs.py  detect_optimizations.py  example_resnet.py  example_vit.py  extract_inputs.py  inspect_models.py  move_benchmark.py  move_benchmarks.py  slim_kwargs.py  test_all_benchmarks.py  test_analysis.py  test_baselines.py  test_basic.py  test_benchmarks.py  test_correctness.py  test_model_validate.py  test_one_benchmark.py  test_optimize_onnx.py  test_pattern_detect.py  test_preprocess.py  test_preprocess_features.py  test_slimonnx.py  test_slimonnx_regression.py  test_structure_analysis.py  test_validation.py  test_vnncomp2024_benchmarks.py  utils.py  vnncomp2024_benchmarks
test/test_patterns/: create_patterns.py  run_tests.bat  test_optimize.py  test_optimize_onnx.py  test_pattern_detect.py
test/test_patterns/models/: bn_conv.onnx  bn_convtranspose.onnx  bn_gemm.onnx  bn_reshape_gemm.onnx  constant_folding.onnx  conv_bn.onnx  convtranspose_bn.onnx  depthwise_conv_bn.onnx  dropout.onnx  gemm_gemm.onnx  gemm_reshape_bn.onnx  matmul_add.onnx  redundant_ops.onnx  transpose_bn_transpose.onnx
test_vnncomp/: test_acasxu.py  test_cctsdb.py  test_cersyve.py  test_cgan.py  test_collins_rul_cnn.py  test_dist_shift_2023.py  test_lsnc.py  test_ml4acopf_2024.py  test_nn4sys.py  test_test.py  test_tinyimagenet.py  test_tllverifybench_2023.py  test_vit_2023.py
tests/: __init__.py  conftest.py  detect_optimizations.py  test_analysis.py  test_basic.py  test_slimonnx.py  test_slimonnx_regression.py  test_validation.py  test_vnncomp2024_benchmarks.py  update_baselines.py  utils.py
tests/baselines/acasxu_2023/: ACASXU_run2a_1_2_batch_2000.json  ACASXU_run2a_1_3_batch_2000.json  ACASXU_run2a_1_4_batch_2000.json  ACASXU_run2a_1_5_batch_2000.json  ACASXU_run2a_1_6_batch_2000.json  ACASXU_run2a_1_7_batch_2000.json  ACASXU_run2a_1_8_batch_2000.json  ACASXU_run2a_1_9_batch_2000.json  ACASXU_run2a_2_1_batch_2000.json  ACASXU_run2a_2_2_batch_2000.json  ACASXU_run2a_2_3_batch_2000.json  ACASXU_run2a_2_4_batch_2000.json  ACASXU_run2a_2_5_batch_2000.json  ACASXU_run2a_2_6_batch_2000.json  ACASXU_run2a_2_7_batch_2000.json  ACASXU_run2a_2_8_batch_2000.json  ACASXU_run2a_2_9_batch_2000.json  ACASXU_run2a_3_1_batch_2000.json  ACASXU_run2a_3_2_batch_2000.json  ACASXU_run2a_3_3_batch_2000.json
tests/baselines/cctsdb_yolo_2023/: patch-1.json  patch-3.json
tests/baselines/cgan_2023/: cGAN_imgSz32_nCh_1.json  cGAN_imgSz32_nCh_1_transposedConvPadding_1.json  cGAN_imgSz32_nCh_3.json  cGAN_imgSz32_nCh_3_nonlinear_activations.json  cGAN_imgSz32_nCh_3_small_transformer.json  cGAN_imgSz32_nCh_3_upsample.json  cGAN_imgSz64_nCh_1.json  cGAN_imgSz64_nCh_3.json
tests/baselines/cifar100/: CIFAR100_resnet_large.json  CIFAR100_resnet_medium.json
tests/baselines/collins_aerospace_benchmark/: yolov5nano_LRelu_640.json
tests/baselines/collins_rul_cnn_2023/: NN_rul_full_window_20.json  NN_rul_full_window_40.json  NN_rul_small_window_20.json
tests/baselines/cora/: cifar10-point.json  cifar10-set.json  cifar10-trades.json  mnist-set.json  (+5 more)
tests/test_arch/: test_imports.py
tests/test_benchmarks/: build_benchmarks.py  build_test_data.py  conftest.py  detect_optimizations.py  inspect_models.py  test_analysis.py  test_basic.py  test_slimonnx.py  test_slimonnx_regression.py  test_validation.py  test_vnncomp2024_benchmarks.py  update_baselines.py  vnncomp2024_benchmarks
tests/test_units/: README.md  _helpers.py  conftest.py  test_presets.py
(+334 files in other folders)
