[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slimonnx"
version = "0.1.0"
description = "ONNX model optimization and simplification utilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zhongkui Ma", email = "zhongkui@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "onnx==1.17.0",
    "onnxruntime==1.20.0",
    "numpy==2.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.0",
    "mypy>=1.0",
    "pyright>=1.1.0",
]

[tool.setuptools]
packages = ["slimonnx"]

[tool.setuptools.package-data]
slimonnx = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "C90", "UP", "PT", "PIE"]
ignore = []
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pyright]
include = ["slimonnx"]
exclude = ["tests", "venv", ".venv", "build", "dist"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[project.urls]
Homepage = "https://github.com/ZhongkuiMa/slimonnx"
Repository = "https://github.com/ZhongkuiMa/slimonnx.git"
Documentation = "https://github.com/ZhongkuiMa/slimonnx#readme"
